[gd_scene load_steps=14 format=1]

[ext_resource path="res://worldmap.png" type="Texture" id=1]
[ext_resource path="res://Worldmap.gd" type="Script" id=2]
[ext_resource path="res://Schiff_horizontal_r.png" type="Texture" id=3]
[ext_resource path="res://swords.png" type="Texture" id=4]
[ext_resource path="res://text.fnt" type="BitmapFont" id=5]
[ext_resource path="res://coin.png" type="Texture" id=6]
[ext_resource path="res://text_small.fnt" type="BitmapFont" id=7]
[ext_resource path="res://pokal.png" type="Texture" id=8]
[ext_resource path="res://backgroundmusic.ogg" type="AudioStream" id=9]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = { "points":Vector2Array( 0, 0, 0, 0, 413.776, 105.091, 0, 0, 0, 0, 587.734, 114.344, 0, 0, 0, 0, 752.439, 64.3777, 0, 0, 0, 0, 948.605, 60.6765, 0, 0, 0, 0, 1183.63, 93.9877, 0, 0, 0, 0, 1359.44, 136.552, 0, 0, 0, 0, 1389.05, 217.979, 0, 0, 0, 0, 1355.74, 260.543, 0, 0, 0, 0, 1279.87, 286.452, 0, 0, 0, 0, 1185.48, 323.465, 0, 0, 0, 0, 1067.04, 332.718, 0, 0, 0, 0, 991.169, 347.523, 0, 0, 0, 0, 865.327, 367.879, 0, 0, 0, 0, 770.945, 347.523, 0, 0, 0, 0, 850.522, 403.041, 0, 0, 0, 0, 931.949, 436.352, 0, 0, 0, 0, 978.215, 495.572, 0, 0, 0, 0, 933.8, 551.091, 0, 0, 0, 0, 874.58, 612.161, 0, 0, 0, 0, 785.75, 656.576, 0, 0, 0, 0, 687.667, 702.842, 0, 0, 0, 0, 804.256, 756.51, 0, 0, 0, 0, 894.937, 769.464, 0, 0, 0, 0, 998.572, 743.555, 0, 0, 0, 0, 1089.25, 708.394, 0, 0, 0, 0, 1168.83, 680.634, 0, 0, 0, 0, 1246.55, 660.277, 0, 0, 0, 0, 1359.44, 667.68, 0, 0, 0, 0, 1479.73, 697.29, 0, 0, 0, 0, 1588.92, 758.36, 0, 0, 0, 0, 1668.5, 813.879, 0, 0, 0, 0, 1736.97, 882.352 ) }

[sub_resource type="GDScript" id=2]

script/source = "extends Popup\n\n# class member variables go here, for example:\n# var a = 2\n# var b = \"textvar\"\nvar costrepair\nfunc _ready():\n\t# Called every time the node is added to the scene.\n\t# Initialization here\n\tcostrepair = int(100*(1-global.playerhealth/float(global.maxplayerhealth)))\n#\tset_fixed_process(true)\n\tif(global.fraction):\n\t\tget_node(\"Panel/ScrollContainer/VBoxContainer/Button1\").set_text(\"Shiphull1 - 100\")\n\t\tget_node(\"Panel/ScrollContainer/VBoxContainer/Button2\").set_text(\"Big Cannon - 200\")\n\t\tif(global.hasItem(\"Shiphull1\")):\n\t\t\tget_node(\"Panel/ScrollContainer/VBoxContainer/Button1\").hide()\n\t\tif(global.hasItem(\"Big Gun\")):\n\t\t\tget_node(\"Panel/ScrollContainer/VBoxContainer/Button2\").hide()\n\tpass\n\n#func _fixed_process(delta):\nfunc update_interface():\n\tget_node(\"Panel/ScrollContainer/VBoxContainer/Button\").set_text(str(\"repair Ship - \",costrepair))\n#\tset_fixed_process(false)\n\nfunc _on_Button_pressed():\n\tif(get_node(\"Panel/ScrollContainer/VBoxContainer/Button\").is_pressed() and global.playerhealth != global.maxplayerhealth and global.Cash>=costrepair):\n\t\tglobal.Cash-=costrepair\n\t\tcostrepair=0\n\t\tget_node(\"Panel/ScrollContainer/VBoxContainer/Button\").set_text(str(\"repair Ship - \",costrepair))\n\t\tget_parent().updateinterface()\n\tpass # replace with function body\n\n\nfunc _on_Cancel_pressed():\n\tself.hide()\n\tpass # replace with function body\n\n\nfunc _on_Button1_pressed():\n\tif(global.fraction):\n\t\tif((!global.hasItem(\"Shiphull1\")) and global.Cash>100):\n\t\t\tglobal.addItem(\"Shiphull1\")\n\t\t\tvar newmax=global.maxplayerhealth+20\n\t\t\tglobal.playerhealth=newmax*global.playerhealth/global.maxplayerhealth\n\t\t\tglobal.maxplayerhealth=newmax\n\t\t\tglobal.Cash-=100\n\t\t\tget_node(\"Panel/ScrollContainer/VBoxContainer/Button1\").hide()\n\telse:\n\t\tif((!global.hasItem(\"Big Gun\")) and global.Cash>100):\n\t\t\tglobal.addItem(\"Big Gun\")\n\t\t\tglobal.Cash-=100\n\t\t\tget_node(\"Panel/ScrollContainer/VBoxContainer/Button1\").hide()\n\tpass # replace with function body\n\n\nfunc _on_Button2_pressed():\n\tif(!global.fraction):\n\t\tif((!global.hasItem(\"Shiphull1\")) and global.Cash>200):\n\t\t\tglobal.addItem(\"Shiphull1\")\n\t\t\tvar newmax=global.maxplayerhealth+20\n\t\t\tglobal.playerhealth=newmax*global.playerhealth/global.maxplayerhealth\n\t\t\tglobal.maxplayerhealth=newmax\n\t\t\tglobal.Cash-=200\n\t\t\tget_node(\"Panel/ScrollContainer/VBoxContainer/Button2\").hide()\n\telse:\n\t\tif((!global.hasItem(\"Big Gun\")) and global.Cash>200):\n\t\t\tglobal.addItem(\"Big Gun\")\n\t\t\tglobal.Cash-=200\n\t\t\tget_node(\"Panel/ScrollContainer/VBoxContainer/Button2\").hide()\n\tpass # replace with function body\n"

[sub_resource type="GDScript" id=3]

script/source = "extends Popup\n\n# class member variables go here, for example:\n# var a = 2\n# var b = \"textvar\"\n\n#save structure:\n\n#var Points=0\n#var Cash=0\n#var Level=0\n#var fraction=true\n#var position=0\n#var playerhealth=20\n#var maxplayerhealth=20\n#var won=false\n#var shipAddons=StringArray()\n\nvar file=File.new()\n\nfunc _ready():\n\t# Called every time the node is added to the scene.\n\t# Initialization here\n\tpass\n\nfunc _savesCheck():\n\tvar index=0\n\twhile(file.file_exists(str(\"Saves/save\",index+1,\".save\"))):\n\t\tindex+=1\n\tglobal.saveamount=index\n\tpass\n\nfunc _saveGame():\n\tvar filename=str(\"Saves/save\",global.saveamount+1,\".save\")\n\tfile.open(filename,file.WRITE)\n\tfile.store_line(str(global.Points))\n\tfile.store_line(str(global.Cash))\n\tfile.store_line(str(global.Level))\n\tfile.store_line(str(global.fraction))\n\tfile.store_line(str(global.position))\n\tfile.store_line(str(global.playerhealth))\n\tfile.store_line(str(global.maxplayerhealth))\n\tfile.store_line(str(global.won))\n\tfile.store_line(str(global.shipAddons.size()))\n\tfor i in range(global.shipAddons.size()):\n\t\tfile.store_line(str(global.shipAddons[i]))\n\tfile.close()\n\t_savesCheck()\n\tpass\n\nfunc _loadGame(number):\n\tvar filename=str(\"Saves/save\",number,\".save\")\n\tfile.open(filename,file.READ)\n\tglobal.Points=int(file.get_line())\n\tglobal.Cash=int(file.get_line())\n\tglobal.Level=int(file.get_line())\n\tglobal.fraction=bool(file.get_line())\n\tglobal.position=int(file.get_line())\n\tglobal.playerhealth=int(file.get_line())\n\tglobal.maxplayerhealth=int(file.get_line())\n\tglobal.won=int(file.get_line())\n\tvar shipAddonssize=int(file.get_line())\n\tfor i in range(shipAddonssize):\n\t\tglobal.shipAddons.push_back(file.get_line())\n\tfile.close()\n\t_savesCheck()\n\tpass\n\n\nfunc _on_Save_pressed():\n\t_saveGame()\n\tpass # replace with function body\n\n\nfunc _on_Exit_pressed():\n\tget_tree().quit()\n\tpass # replace with function body\n\n\nfunc _on_Cancel_pressed():\n\tself.hide()\n\tpass # replace with function body\n"

[sub_resource type="GDScript" id=4]

script/source = "extends Popup\n\n# class member variables go here, for example:\n# var a = 2\n# var b = \"textvar\"\n\nfunc _ready():\n\t# Called every time the node is added to the scene.\n\t# Initialization here\n\tpass\n\n\nfunc _on_Button_pressed():\n\tself.hide()\n\tpass # replace with function body\n"

[node name="Sprite" type="Sprite"]

texture = ExtResource( 1 )
centered = false
script/script = ExtResource( 2 )

[node name="Path2D" type="Path2D" parent="."]

editor/display_folded = true
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 1736.95, 882.335 )
offset = 3464.15
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D"]

texture = ExtResource( 3 )
offset = Vector2( 0, -20 )

[node name="PathFollow2D2" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 413.776, 105.091 )
transform/rot = -3.04461
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0

[node name="PathFollow2D 2" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 756.122, 64.3082 )
transform/rot = -3.04461
offset = 350.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D 2"]

texture = ExtResource( 4 )

[node name="PathFollow2D3" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 1300.31, 122.237 )
transform/rot = -3.04461
offset = 900.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D3"]

texture = ExtResource( 4 )

[node name="PathFollow2D4" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 1261.89, 293.503 )
transform/rot = -3.04461
offset = 1200.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D4"]

texture = ExtResource( 4 )

[node name="PathFollow2D5" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 772.986, 347.963 )
transform/rot = -3.04461
offset = 1700.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D5"]

texture = ExtResource( 4 )

[node name="PathFollow2D6" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 973.209, 489.164 )
transform/rot = -3.04461
offset = 1950.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D6"]

texture = ExtResource( 4 )

[node name="PathFollow2D7" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 688.302, 702.542 )
transform/rot = -3.04461
offset = 2320.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D7"]

texture = ExtResource( 4 )

[node name="PathFollow2D8" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 953.719, 754.768 )
transform/rot = -3.04461
offset = 2600.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D8"]

texture = ExtResource( 4 )

[node name="PathFollow2D9" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 1377.52, 672.131 )
transform/rot = -3.04461
offset = 3040.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D9"]

texture = ExtResource( 4 )

[node name="PathFollow2D10" type="PathFollow2D" parent="Path2D"]

transform/pos = Vector2( 1726.93, 872.307 )
transform/rot = -3.04461
offset = 3450.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="Sprite" type="Sprite" parent="Path2D/PathFollow2D10"]

texture = ExtResource( 4 )

[node name="Button" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1196.0
margin/top = 960.0
margin/right = 1396.0
margin/bottom = 1060.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Shop"
flat = false

[node name="Button1" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 787.5
margin/top = 960.0
margin/right = 1177.5
margin/bottom = 1060.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Attack next"
flat = false

[node name="Button2" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 516.0
margin/top = 960.0
margin/right = 766.0
margin/bottom = 1060.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Menu"
flat = false

[node name="Interface" type="Node2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1690, 60 )
z/z = 3

[node name="Sprite" type="Sprite" parent="Interface"]

texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Interface"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 25.0
margin/top = -10.0
margin/right = 65.0
margin/bottom = 4.0
custom_fonts/font = ExtResource( 7 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Label2" type="Label" parent="Interface"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -40.0
margin/top = -41.0
margin/right = 0.0
margin/bottom = -27.0
custom_fonts/font = ExtResource( 7 )
text = "Score: 0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Popup" type="Popup" parent="."]

editor/display_folded = true
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 740.0
margin/top = 193.0
margin/right = 1240.0
margin/bottom = 893.0
popup/exclusive = false
script/script = SubResource( 2 )

[node name="Panel" type="Panel" parent="Popup"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 500.0
margin/bottom = 700.0

[node name="ScrollContainer" type="ScrollContainer" parent="Popup/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 30.0
margin/top = 30.0
margin/right = 470.0
margin/bottom = 630.0
scroll/horizontal = false
scroll/vertical = true

[node name="VBoxContainer" type="VBoxContainer" parent="Popup/Panel/ScrollContainer"]

rect/min_size = Vector2( 440, 0 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 440.0
margin/bottom = 158.0
alignment = 0

[node name="Button" type="Button" parent="Popup/Panel/ScrollContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 50 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 440.0
margin/bottom = 50.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "repair Ship - 42"
flat = false

[node name="Button1" type="Button" parent="Popup/Panel/ScrollContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 50 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 54.0
margin/right = 440.0
margin/bottom = 104.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Big Cannon - 100"
flat = false

[node name="Button2" type="Button" parent="Popup/Panel/ScrollContainer/VBoxContainer"]

rect/min_size = Vector2( 0, 50 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 108.0
margin/right = 440.0
margin/bottom = 158.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Ship Hull -200"
flat = false

[node name="Button" type="Button" parent="Popup"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 215.0
margin/top = 650.0
margin/right = 291.0
margin/bottom = 677.0
custom_fonts/font = ExtResource( 7 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="Menu" type="Popup" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 740.0
margin/top = 193.0
margin/right = 1240.0
margin/bottom = 543.0
popup/exclusive = false
script/script = SubResource( 3 )

[node name="Panel" type="Panel" parent="Menu"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 500.0
margin/bottom = 350.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menu/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 50.0
margin/right = 450.0
margin/bottom = 300.0
alignment = 0

[node name="Button" type="Button" parent="Menu/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 79.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Save"
flat = false

[node name="Button1" type="Button" parent="Menu/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 83.0
margin/right = 400.0
margin/bottom = 162.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Exit Game"
flat = false

[node name="Button2" type="Button" parent="Menu/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 166.0
margin/right = 400.0
margin/bottom = 245.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Cancel"
flat = false

[node name="Wonscreen" type="Popup" parent="."]

editor/display_folded = true
visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 740.0
margin/top = 193.0
margin/right = 1240.0
margin/bottom = 593.0
popup/exclusive = false
script/script = SubResource( 4 )

[node name="Panel" type="Panel" parent="Wonscreen"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 500.0
margin/bottom = 400.0

[node name="VBoxContainer" type="VBoxContainer" parent="Wonscreen/Panel"]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 50.0
margin/top = 50.0
margin/right = 450.0
margin/bottom = 300.0
alignment = 0

[node name="Label" type="Label" parent="Wonscreen/Panel/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 400.0
margin/bottom = 21.0
custom_fonts/font = ExtResource( 7 )
text = "Congratulations, you won"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="TextureFrame" type="TextureFrame" parent="Wonscreen/Panel/VBoxContainer"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 25.0
margin/right = 400.0
margin/bottom = 225.0
texture = ExtResource( 8 )
stretch_mode = 0

[node name="Button" type="Button" parent="Wonscreen/Panel/VBoxContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 229.0
margin/right = 400.0
margin/bottom = 308.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "OK"
flat = false

[node name="StreamPlayer" type="StreamPlayer" parent="."]

stream/stream = ExtResource( 9 )
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = true
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[connection signal="pressed" from="Button" to="." method="_on_ShopButton_pressed"]

[connection signal="pressed" from="Button1" to="." method="_on_Button1_pressed"]

[connection signal="pressed" from="Button2" to="." method="_on_MenuButton_pressed"]

[connection signal="pressed" from="Popup/Panel/ScrollContainer/VBoxContainer/Button" to="Popup" method="_on_Button_pressed"]

[connection signal="pressed" from="Popup/Panel/ScrollContainer/VBoxContainer/Button1" to="Popup" method="_on_Button1_pressed"]

[connection signal="pressed" from="Popup/Panel/ScrollContainer/VBoxContainer/Button2" to="Popup" method="_on_Button2_pressed"]

[connection signal="pressed" from="Popup/Button" to="Popup" method="_on_Cancel_pressed"]

[connection signal="pressed" from="Menu/Panel/VBoxContainer/Button" to="Menu" method="_on_Save_pressed"]

[connection signal="pressed" from="Menu/Panel/VBoxContainer/Button1" to="Menu" method="_on_Exit_pressed"]

[connection signal="pressed" from="Menu/Panel/VBoxContainer/Button2" to="Menu" method="_on_Cancel_pressed"]

[connection signal="pressed" from="Wonscreen/Panel/VBoxContainer/Button" to="Wonscreen" method="_on_Button_pressed"]


